# simple_image_viewer

./: LICENSE
src/: CMakeLists.txt  autoscalepixmaplabel.cpp  autoscalepixmaplabel.h  brightnessslider.cpp  brightnessslider.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  imageviewerwidget.cpp  imageviewerwidget.h  imagewidget.cpp  imagewidget.h  main.cpp  style.css  switchbuttons.cpp  switchbuttons.h
